# ScheduleProject

./: CMakeLists.txt  ScheduleProject_ File List.html
google_tests/: CmakeLists.txt
src/: main.cpp
src/ClassesStruct/: ClassCode.cpp  ClassCode.h  ClassesPerUc.cpp  ClassesPerUc.h  ClassesTimeTable.cpp  ClassesTimeTable.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h  UcCode.cpp  UcCode.h  UcCodeClassCode.cpp  UcCodeClassCode.h
src/DataCollectors/: CalssesSchedule.cpp  CalssesSchedule.h  ClassesPerUc.cpp  ClassesPerUc.h  ClassesSchedule.cpp  ClassesSchedule.h  DataCollector.cpp  DataCollector.h  DataTest.cpp  StudentClasses.cpp  StudentClasses.h  StudentsClasses.cpp  StudentsClasses.h
src/ScheduleManagment/: ScheduleManager.cpp  ScheduleManager.h  UCManager.cpp  UCManager.h
